# algorithms-data-structures

./: pyproject.toml
array/one_dimension/: 2.insertion.py  5.traversal.py
array/two_dimension/: 1.creation.py  4.traversal.py  5.search.py
arrays/examples/one_dimension/: creation.py  deletion.py  exercise.py  search.py
arrays/examples/two_dimension/: 2.insertion.py  3.access.py  6.deletion.py
custom/: hashtable.py
dictionary/: all.py
dictionary/exercises/: common_keys.py  conditional_filter.py  counter.py  highest_value.py  reverse_key_value_pairs.py  same_frequency.py
linked_list/: circular_doubly.py  circular_singly.py  singly.py
list/: 1.traversal.py  2.insert_and_update.py
list/exercises/: diagonal_sum.py  find_number.py  two_sum.py
lists/: functions.py  search.py  slice_and_delete.py
lists/exercises/: duplicated_numbers.py  max_product.py  missing_number.py
tuple/: all.py
tuple/exercises/: common_elements.py  concatenate.py  diagonal.py  insert_value.py  sum_and_product.py  sum_elements.py
